package org.openjfx.editorBackend;

public interface Command {
    void execute(Document document);
}
