@startuml

' =======================
' MODEL DANYCH
' =======================
class Document {
  -content : String
}

' =======================
' STRATEGY PATTERN
' FileManager deleguje zapis/odczyt do strategii
' =======================
class FileManager {
    - SaveStrategy saveStrategy
    - StringProperty saveModeProperty
    - Path saveFilePath
    + void setSaveStrategy(SaveStrategy _saveStrategy)
    + void setSaveStrategy(ESaveStrategies saveStrategy)
    + void setSaveFilePath(Path filePath)
    + String getSaveFileName()
    + void save(Document document, Path savePath)
    + void load(Document document, Path loadPath)
    + StringProperty saveModeProperty()
}


interface SaveStrategy {
  +save(doc : Document, path)
}

class LosslessSave
class NoMarkdownSave

SaveStrategy <|-- LosslessSave
SaveStrategy <|-- NoMarkdownSave

FileManager --> SaveStrategy

enum ESaveStrategies {
    + LOSSLESS
    + NO_MARKDOWN
    - Supplier<SaveStrategy> constructor
    - String prettyName
    + SaveStrategy create()
    + String toString()
}

ESaveStrategies --> SaveStrategy
ESaveStrategies --> LosslessSave
ESaveStrategies --> NoMarkdownSave

' =======================
' COMMAND PATTERN
' DocumentEditor jest klientem komend
' Idealne dla GUI, toolbarów i skrótów klawiszowych
' =======================
interface Command {
  +execute(doc : Document)
}

class PasteCommand

Command <|-- CopyCommand
Command <|-- PasteCommand

' =======================
' MEMENTO PATTERN
' Undo/Redo przez snapshoty stanu dokumentu
' =======================
class DocumentMemento {
  -state : String
}

class DocumentEditor {
        - final Document document
        - final Stack<DocumentMemento> undoStack
        - final Stack<DocumentMemento> redoStack
        + DocumentEditor()
        + Document getDocument()
        + void execute(Command command)
        + void undo()
        + void redo()
        + StringProperty textProperty()
    }

DocumentEditor --> Document
DocumentEditor --> Command
DocumentEditor --> DocumentMemento

' =======================
' GUI
' GUI wyzwala komendy, nie zna szczegółów edytora
' =======================
 class MainApp {
        - static MainApp singleton
        - final DocumentEditor documentEditor
        - final FileManager fileManager
        + MainApp()
        + static MainApp getSingleton()
        + void start(Stage stage) throws Exception
        + static void main(String[] args)
        + FileManager getFileManager()
        + DocumentEditor getDocumentEditor()
    }

MainApp --> DocumentEditor
MainApp --> FileManager
MainApp --> ESaveStrategies

@enduml